<resources>
    <string name="app_name">Dispatcher</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="splash_text">Dispatcher</string>
    <string name="title_activity_auth">AuthActivity</string>
    <string name="loginHeadline">Login</string>
    <string name="signuoHeadline">Signup</string>
    <string name="emailHint">Your Email</string>
    <string name="passwordHint">Password</string>
    <string name="reEnterHint">Re-Enter Password</string>
    <string name="LoginButton">LOGIN</string>
    <string name="SignupButton">SIGNUP</string>
    <string name="invalidEmail">"Invalid email format"</string>
    <string name="invalidPassword">"Invalid password format"</string>
    <string name="shortPassword">"Password must be at least 7 characters with letters and numbers"</string>
    <string name="homeHeadline">Top Headlines in USA</string>
    <string name="searchHint">Search</string>
    <string name="sortBy">Sort by</string>
    <string name="RecentSearch">RECENT SEARCHES</string>
    <string name="clear">clear</string>
    <string name="no_matches_for_query">We couldn’t find any matches for your query</string>
    <string name="filterTitle">FILTER</string>
    <string name="searchIn">Search in</string>
    <string name="sources">Sources</string>
    <string name="language">Language</string>
    <string name="dates">Dates</string>
    <string name="placeHolder">PH</string>
    <string name="btnFilter">VIEW RESULTS</string>
    <string name="searchResultBtn">NAVIGATE TO DISPATCH</string>

</resources>
