<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/filterTitle"
        style="@style/filterTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filterTitle"
        android:layout_marginStart="16dp"
        android:paddingBottom="27dp"
        android:paddingTop="27dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/searchInWrapper"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/colorMainText"
        app:layout_constraintTop_toBottomOf="@id/filterTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <View
            android:id="@+id/topBorder"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/editTextBorder"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/searchIn"
            style="@style/recentSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/searchIn"
            android:layout_marginStart="16dp"
            android:layout_marginTop="11dp"
            android:layout_marginBottom="11dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/searchInSelected"
            style="@style/recentSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeHolder"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="11dp"
            android:layout_marginBottom="11dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sourcesWrapper"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/colorMainText"
        app:layout_constraintTop_toBottomOf="@id/searchInWrapper"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/editTextBorder"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/sources"
            style="@style/recentSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sources"
            android:layout_marginStart="16dp"
            android:layout_marginTop="11dp"
            android:layout_marginBottom="11dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/sourcesSelected"
            style="@style/recentSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeHolder"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="11dp"
            android:layout_marginBottom="11dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/languageWrapper"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/colorMainText"
        app:layout_constraintTop_toBottomOf="@id/sourcesWrapper"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/editTextBorder"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/language"
            style="@style/recentSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:layout_marginStart="16dp"
            android:layout_marginTop="11dp"
            android:layout_marginBottom="11dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/languageSelected"
            style="@style/recentSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeHolder"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="11dp"
            android:layout_marginBottom="11dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/datesWrapper"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/colorMainText"
        app:layout_constraintTop_toBottomOf="@id/languageWrapper"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/editTextBorder"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/dates"
            style="@style/recentSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dates"
            android:layout_marginStart="16dp"
            android:layout_marginTop="11dp"
            android:layout_marginBottom="11dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/datesSelected"
            style="@style/recentSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeHolder"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="11dp"
            android:layout_marginBottom="11dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/editTextBorder"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
